parser.output
Terminals unused in grammar

   ENDOFILE
   ENDL
   ERROR
   TRIPLE_STRING_LITERAL


Grammar

    0 $accept: program $end

    1 program: classdecls

    2 classdecls: classdecls classdecl
    3           | classdecl

    4 classdecl: CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES OPEN_ACCOLADE CLOSE_ACCOLADE
    5          | CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES OPEN_ACCOLADE features CLOSE_ACCOLADE
    6          | CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES EXTENDS TYPE_IDENTIFIER actuals OPEN_ACCOLADE features CLOSE_ACCOLADE
    7          | CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES EXTENDS NATIVE OPEN_ACCOLADE features CLOSE_ACCOLADE

    8 vfcontents: vfcontents COMMA vfcontent
    9           | vfcontent
   10           | %empty

   11 vfcontent: VAR OBJECT_IDENTIFIER COLON TYPE_IDENTIFIER

   12 features: features feature
   13         | feature

   14 feature: OVERRIDE DEF OBJECT_IDENTIFIER formals COLON TYPE_IDENTIFIER ASSIGN expression SEMICOLON
   15        | OVERRIDE DEF OBJECT_IDENTIFIER formals COLON TYPE_IDENTIFIER ASSIGN NATIVE SEMICOLON
   16        | DEF OBJECT_IDENTIFIER formals COLON TYPE_IDENTIFIER ASSIGN expression SEMICOLON
   17        | DEF OBJECT_IDENTIFIER formals COLON TYPE_IDENTIFIER ASSIGN NATIVE SEMICOLON
   18        | VAR OBJECT_IDENTIFIER ASSIGN NATIVE SEMICOLON
   19        | VAR OBJECT_IDENTIFIER COLON TYPE_IDENTIFIER ASSIGN expression SEMICOLON
   20        | OPEN_ACCOLADE block CLOSE_ACCOLADE SEMICOLON

   21 formals: OPEN_PARENTHESES CLOSE_PARENTHESES
   22        | OPEN_PARENTHESES formalcontents CLOSE_PARENTHESES

   23 formalcontents: formalcontents COMMA formalcontent
   24               | formalcontent

   25 formalcontent: OBJECT_IDENTIFIER COLON TYPE_IDENTIFIER

   26 actuals: OPEN_PARENTHESES CLOSE_PARENTHESES
   27        | OPEN_PARENTHESES actualscontent CLOSE_PARENTHESES

   28 actualscontent: actualscontent COMMA expression
   29               | expression

   30 block: blockexpressions

   31 blockexpressions: blockexpressions SEMICOLON blockexpression
   32                 | blockexpression

   33 blockexpression: VAR OBJECT_IDENTIFIER COLON TYPE_IDENTIFIER ASSIGN expression
   34                | expression

   35 expression: OBJECT_IDENTIFIER ASSIGN expression
   36           | NOT expression
   37           | MINUS expression
   38           | IF OPEN_PARENTHESES expression CLOSE_PARENTHESES expression ELSE expression
   39           | WHILE OPEN_PARENTHESES expression CLOSE_PARENTHESES expression
   40           | SUPER DOT OBJECT_IDENTIFIER actuals
   41           | OBJECT_IDENTIFIER actuals
   42           | NEW TYPE_IDENTIFIER actuals
   43           | OPEN_ACCOLADE block CLOSE_ACCOLADE
   44           | OPEN_BRACKETS CLOSE_BRACKETS
   45           | OPEN_PARENTHESES expression CLOSE_PARENTHESES
   46           | expression DOT OBJECT_IDENTIFIER actuals
   47           | expression MATCH cases
   48           | expression LE expression
   49           | expression LT expression
   50           | expression EQ_OP expression
   51           | expression MULTIPLY expression
   52           | expression DIVIDE expression
   53           | expression PLUS expression
   54           | expression MINUS expression
   55           | NUL
   56           | OPEN_PARENTHESES CLOSE_PARENTHESES
   57           | OBJECT_IDENTIFIER
   58           | INTEGER_CONST
   59           | STRING_LITERAL
   60           | BOOLEAN_CONST
   61           | THIS

   62 cases: OPEN_ACCOLADE casecontents CLOSE_ACCOLADE

   63 casecontents: casecontents casecontent
   64             | casecontent

   65 casecontent: CASE OBJECT_IDENTIFIER COLON TYPE_IDENTIFIER DARROW block
   66            | CASE NUL DARROW block


Terminals, with rules where they appear

$end (0) 0
error (256)
ASSIGN (258) 14 15 16 17 18 19 33 35
CASE (259) 65 66
CLASS (260) 4 5 6 7
DARROW (261) 65 66
DEF (262) 14 15 16 17
ELSE (263) 38
EXTENDS (264) 6 7
EQ_OP (265) 50
IF (266) 38
NATIVE (267) 7 15 17 18
NEW (268) 42
NUL (269) 55 66
OVERRIDE (270) 14 15
SUPER (271) 40
THIS (272) 61
VAR (273) 11 18 19 33
WHILE (274) 39
SEMICOLON (275) 14 15 16 17 18 19 20 31
COLON (276) 11 14 15 16 17 19 25 33 65
COMMA (277) 8 23 28
OPEN_ACCOLADE (278) 4 5 6 7 20 43 62
CLOSE_ACCOLADE (279) 4 5 6 7 20 43 62
OPEN_PARENTHESES (280) 4 5 6 7 21 22 26 27 38 39 45 56
CLOSE_PARENTHESES (281) 4 5 6 7 21 22 26 27 38 39 45 56
OPEN_BRACKETS (282) 44
CLOSE_BRACKETS (283) 44
ENDOFILE (284)
IFWHILE (285)
MATCH (286) 47
LE (287) 48
LT (288) 49
PLUS (289) 53
MINUS (290) 37 54
MULTIPLY (291) 51
DIVIDE (292) 52
NOT (293) 36
UMINUS (294)
DOT (295) 40 46
ENDL (296)
ERROR (297)
BOOLEAN_CONST (298) 60
INTEGER_CONST (299) 58
STRING_LITERAL (300) 59
TRIPLE_STRING_LITERAL (301)
OBJECT_IDENTIFIER (302) 11 14 15 16 17 18 19 25 33 35 40 41 46 57 65
TYPE_IDENTIFIER (303) 4 5 6 7 11 14 15 16 17 19 25 33 42 65


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1, on right: 0
classdecls (51)
    on left: 2 3, on right: 1 2
classdecl (52)
    on left: 4 5 6 7, on right: 2 3
vfcontents (53)
    on left: 8 9 10, on right: 4 5 6 7 8
vfcontent (54)
    on left: 11, on right: 8 9
features (55)
    on left: 12 13, on right: 5 6 7 12
feature (56)
    on left: 14 15 16 17 18 19 20, on right: 12 13
formals (57)
    on left: 21 22, on right: 14 15 16 17
formalcontents (58)
    on left: 23 24, on right: 22 23
formalcontent (59)
    on left: 25, on right: 23 24
actuals (60)
    on left: 26 27, on right: 6 40 41 42 46
actualscontent (61)
    on left: 28 29, on right: 27 28
block (62)
    on left: 30, on right: 20 43 65 66
blockexpressions (63)
    on left: 31 32, on right: 30 31
blockexpression (64)
    on left: 33 34, on right: 31 32
expression (65)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    53 54 55 56 57 58 59 60 61, on right: 14 16 19 28 29 33 34 35 36
    37 38 39 45 46 47 48 49 50 51 52 53 54
cases (66)
    on left: 62, on right: 47
casecontents (67)
    on left: 63 64, on right: 62 63
casecontent (68)
    on left: 65 66, on right: 63 64


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    classdecls  go to state 3
    classdecl   go to state 4


State 1

    4 classdecl: CLASS . TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES OPEN_ACCOLADE CLOSE_ACCOLADE
    5          | CLASS . TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES OPEN_ACCOLADE features CLOSE_ACCOLADE
    6          | CLASS . TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES EXTENDS TYPE_IDENTIFIER actuals OPEN_ACCOLADE features CLOSE_ACCOLADE
    7          | CLASS . TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES EXTENDS NATIVE OPEN_ACCOLADE features CLOSE_ACCOLADE

    TYPE_IDENTIFIER  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: classdecls .
    2 classdecls: classdecls . classdecl

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    classdecl  go to state 7


State 4

    3 classdecls: classdecl .

    $default  reduce using rule 3 (classdecls)


State 5

    4 classdecl: CLASS TYPE_IDENTIFIER . OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES OPEN_ACCOLADE CLOSE_ACCOLADE
    5          | CLASS TYPE_IDENTIFIER . OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES OPEN_ACCOLADE features CLOSE_ACCOLADE
    6          | CLASS TYPE_IDENTIFIER . OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES EXTENDS TYPE_IDENTIFIER actuals OPEN_ACCOLADE features CLOSE_ACCOLADE
    7          | CLASS TYPE_IDENTIFIER . OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES EXTENDS NATIVE OPEN_ACCOLADE features CLOSE_ACCOLADE

    OPEN_PARENTHESES  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    2 classdecls: classdecls classdecl .

    $default  reduce using rule 2 (classdecls)


State 8

    4 classdecl: CLASS TYPE_IDENTIFIER OPEN_PARENTHESES . vfcontents CLOSE_PARENTHESES OPEN_ACCOLADE CLOSE_ACCOLADE
    5          | CLASS TYPE_IDENTIFIER OPEN_PARENTHESES . vfcontents CLOSE_PARENTHESES OPEN_ACCOLADE features CLOSE_ACCOLADE
    6          | CLASS TYPE_IDENTIFIER OPEN_PARENTHESES . vfcontents CLOSE_PARENTHESES EXTENDS TYPE_IDENTIFIER actuals OPEN_ACCOLADE features CLOSE_ACCOLADE
    7          | CLASS TYPE_IDENTIFIER OPEN_PARENTHESES . vfcontents CLOSE_PARENTHESES EXTENDS NATIVE OPEN_ACCOLADE features CLOSE_ACCOLADE

    VAR  shift, and go to state 9

    $default  reduce using rule 10 (vfcontents)

    vfcontents  go to state 10
    vfcontent   go to state 11


State 9

   11 vfcontent: VAR . OBJECT_IDENTIFIER COLON TYPE_IDENTIFIER

    OBJECT_IDENTIFIER  shift, and go to state 12


State 10

    4 classdecl: CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents . CLOSE_PARENTHESES OPEN_ACCOLADE CLOSE_ACCOLADE
    5          | CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents . CLOSE_PARENTHESES OPEN_ACCOLADE features CLOSE_ACCOLADE
    6          | CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents . CLOSE_PARENTHESES EXTENDS TYPE_IDENTIFIER actuals OPEN_ACCOLADE features CLOSE_ACCOLADE
    7          | CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents . CLOSE_PARENTHESES EXTENDS NATIVE OPEN_ACCOLADE features CLOSE_ACCOLADE
    8 vfcontents: vfcontents . COMMA vfcontent

    COMMA              shift, and go to state 13
    CLOSE_PARENTHESES  shift, and go to state 14


State 11

    9 vfcontents: vfcontent .

    $default  reduce using rule 9 (vfcontents)


State 12

   11 vfcontent: VAR OBJECT_IDENTIFIER . COLON TYPE_IDENTIFIER

    COLON  shift, and go to state 15


State 13

    8 vfcontents: vfcontents COMMA . vfcontent

    VAR  shift, and go to state 9

    vfcontent  go to state 16


State 14

    4 classdecl: CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES . OPEN_ACCOLADE CLOSE_ACCOLADE
    5          | CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES . OPEN_ACCOLADE features CLOSE_ACCOLADE
    6          | CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES . EXTENDS TYPE_IDENTIFIER actuals OPEN_ACCOLADE features CLOSE_ACCOLADE
    7          | CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES . EXTENDS NATIVE OPEN_ACCOLADE features CLOSE_ACCOLADE

    EXTENDS        shift, and go to state 17
    OPEN_ACCOLADE  shift, and go to state 18


State 15

   11 vfcontent: VAR OBJECT_IDENTIFIER COLON . TYPE_IDENTIFIER

    TYPE_IDENTIFIER  shift, and go to state 19


State 16

    8 vfcontents: vfcontents COMMA vfcontent .

    $default  reduce using rule 8 (vfcontents)


State 17

    6 classdecl: CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES EXTENDS . TYPE_IDENTIFIER actuals OPEN_ACCOLADE features CLOSE_ACCOLADE
    7          | CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES EXTENDS . NATIVE OPEN_ACCOLADE features CLOSE_ACCOLADE

    NATIVE           shift, and go to state 20
    TYPE_IDENTIFIER  shift, and go to state 21


State 18

    4 classdecl: CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES OPEN_ACCOLADE . CLOSE_ACCOLADE
    5          | CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES OPEN_ACCOLADE . features CLOSE_ACCOLADE

    DEF             shift, and go to state 22
    OVERRIDE        shift, and go to state 23
    VAR             shift, and go to state 24
    OPEN_ACCOLADE   shift, and go to state 25
    CLOSE_ACCOLADE  shift, and go to state 26

    features  go to state 27
    feature   go to state 28


State 19

   11 vfcontent: VAR OBJECT_IDENTIFIER COLON TYPE_IDENTIFIER .

    $default  reduce using rule 11 (vfcontent)


State 20

    7 classdecl: CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES EXTENDS NATIVE . OPEN_ACCOLADE features CLOSE_ACCOLADE

    OPEN_ACCOLADE  shift, and go to state 29


State 21

    6 classdecl: CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES EXTENDS TYPE_IDENTIFIER . actuals OPEN_ACCOLADE features CLOSE_ACCOLADE

    OPEN_PARENTHESES  shift, and go to state 30

    actuals  go to state 31


State 22

   16 feature: DEF . OBJECT_IDENTIFIER formals COLON TYPE_IDENTIFIER ASSIGN expression SEMICOLON
   17        | DEF . OBJECT_IDENTIFIER formals COLON TYPE_IDENTIFIER ASSIGN NATIVE SEMICOLON

    OBJECT_IDENTIFIER  shift, and go to state 32


State 23

   14 feature: OVERRIDE . DEF OBJECT_IDENTIFIER formals COLON TYPE_IDENTIFIER ASSIGN expression SEMICOLON
   15        | OVERRIDE . DEF OBJECT_IDENTIFIER formals COLON TYPE_IDENTIFIER ASSIGN NATIVE SEMICOLON

    DEF  shift, and go to state 33


State 24

   18 feature: VAR . OBJECT_IDENTIFIER ASSIGN NATIVE SEMICOLON
   19        | VAR . OBJECT_IDENTIFIER COLON TYPE_IDENTIFIER ASSIGN expression SEMICOLON

    OBJECT_IDENTIFIER  shift, and go to state 34


State 25

   20 feature: OPEN_ACCOLADE . block CLOSE_ACCOLADE SEMICOLON

    IF                 shift, and go to state 35
    NEW                shift, and go to state 36
    NUL                shift, and go to state 37
    SUPER              shift, and go to state 38
    THIS               shift, and go to state 39
    VAR                shift, and go to state 40
    WHILE              shift, and go to state 41
    OPEN_ACCOLADE      shift, and go to state 42
    OPEN_PARENTHESES   shift, and go to state 43
    OPEN_BRACKETS      shift, and go to state 44
    MINUS              shift, and go to state 45
    NOT                shift, and go to state 46
    BOOLEAN_CONST      shift, and go to state 47
    INTEGER_CONST      shift, and go to state 48
    STRING_LITERAL     shift, and go to state 49
    OBJECT_IDENTIFIER  shift, and go to state 50

    block             go to state 51
    blockexpressions  go to state 52
    blockexpression   go to state 53
    expression        go to state 54


State 26

    4 classdecl: CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES OPEN_ACCOLADE CLOSE_ACCOLADE .

    $default  reduce using rule 4 (classdecl)


State 27

    5 classdecl: CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES OPEN_ACCOLADE features . CLOSE_ACCOLADE
   12 features: features . feature

    DEF             shift, and go to state 22
    OVERRIDE        shift, and go to state 23
    VAR             shift, and go to state 24
    OPEN_ACCOLADE   shift, and go to state 25
    CLOSE_ACCOLADE  shift, and go to state 55

    feature  go to state 56


State 28

   13 features: feature .

    $default  reduce using rule 13 (features)


State 29

    7 classdecl: CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES EXTENDS NATIVE OPEN_ACCOLADE . features CLOSE_ACCOLADE

    DEF            shift, and go to state 22
    OVERRIDE       shift, and go to state 23
    VAR            shift, and go to state 24
    OPEN_ACCOLADE  shift, and go to state 25

    features  go to state 57
    feature   go to state 28


State 30

   26 actuals: OPEN_PARENTHESES . CLOSE_PARENTHESES
   27        | OPEN_PARENTHESES . actualscontent CLOSE_PARENTHESES

    IF                 shift, and go to state 35
    NEW                shift, and go to state 36
    NUL                shift, and go to state 37
    SUPER              shift, and go to state 38
    THIS               shift, and go to state 39
    WHILE              shift, and go to state 41
    OPEN_ACCOLADE      shift, and go to state 42
    OPEN_PARENTHESES   shift, and go to state 43
    CLOSE_PARENTHESES  shift, and go to state 58
    OPEN_BRACKETS      shift, and go to state 44
    MINUS              shift, and go to state 45
    NOT                shift, and go to state 46
    BOOLEAN_CONST      shift, and go to state 47
    INTEGER_CONST      shift, and go to state 48
    STRING_LITERAL     shift, and go to state 49
    OBJECT_IDENTIFIER  shift, and go to state 50

    actualscontent  go to state 59
    expression      go to state 60


State 31

    6 classdecl: CLASS TYPE_IDENTIFIER OPEN_PARENTHESES vfcontents CLOSE_PARENTHESES EXTENDS TYPE_IDENTIFIER actuals . OPEN_ACCOLADE features CLOSE_ACCOLADE

    OPEN_ACCOLADE  shift, and go to state 61


State 32

   16 feature: DEF OBJECT_IDENTIFIER . formals COLON TYPE_IDENTIFIER ASSIGN expression SEMICOLON
   17        | DEF OBJECT_IDENTIFIER . formals COLON TYPE_IDENTIFIER ASSIGN NATIVE SEMICOLON

    OPEN_PARENTHESES  shift, and go to state 62

    formals  go to state 63


State 33

   14 feature: OVERRIDE DEF . OBJECT_IDENTIFIER formals COLON TYPE_IDENTIFIER ASSIGN expression SEMICOLON
   15        | OVERRIDE DEF . OBJECT_IDENTIFIER formals COLON TYPE_IDENTIFIER ASSIGN NATIVE SEMICOLON

    OBJECT_IDENTIFIER  shift, and go to state 64


State 34

   18 feature: VAR OBJECT_IDENTIFIER . ASSIGN NATIVE SEMICOLON
   19        | VAR OBJECT_IDENTIFIER . COLON TYPE_IDENTIFIER ASSIGN expression SEMICOLON

    ASSIGN  shift, and go to state 65
    COLON   shift, and go to state 66


State 35

   38 expression: IF . OPEN_PARENTHESES expression CLOSE_PARENTHESES expression ELSE expression

    OPEN_PARENTHESES  shift, and go to state 67


State 36

   42 expression: NEW . TYPE_IDENTIFIER actuals

    TYPE_IDENTIFIER  shift, and go to state 68


State 37

   55 expression: NUL .

    $default  reduce using rule 55 (expression)


State 38

   40 expression: SUPER . DOT OBJECT_IDENTIFIER actuals

    DOT  shift, and go to state 69


State 39

   61 expression: THIS .

    $default  reduce using rule 61 (expression)

